# rs_llm_sdk

./: Cargo.toml  README.md
src/: lib.rs
src/api/: chat_completion.rs  create_image.rs
