[package]
name = "llm-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
derive_builder = "0.12.0"
reqwest = { version = "0.11.23",features = ["json","gzip"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt","rt-multi-thread","macros"] }
